--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,15 @@
-/* main.css */
-   /* common */
-   html {font-size: 10px;}
+   /* main.css */
+   
+/* common */
+   html {
+      background: #000;
+      font-family: 'Pretendard';
+      font-size: 10px;color: #fff;
+   }
+   body {font-size: 1.5rem;}
    h1 {font-size: 3rem;}
-   h2 {font-size: 3rem;background: lightblue;}
-   h3 {font-size: 3rem;background: lightskyblue;}
+   h2 {font-size: 2.5rem;}
+   h3 {font-size: 2rem;}
 
    .inner {
       width: 90%;
@@ -12,36 +18,42 @@
    }
 
    /*** header ***/
-
-header {background: lightpink;}
+/* header {background: #000;} */
 .header_wrap {
    display: flex;justify-content: space-between;align-items: center;
    width: 97%;margin: auto;
 }
-header h1 {background: darksalmon;}
+header h1 {font-family: "Pacifico";}
 header .gnb {
    width: 3rem;height: 3rem;
-   background: darksalmon;}
+   font-size: 3rem;
+   line-height: 2.8rem;
+}
 
 
 
    /*** section .main_visual ***/
 
-   .main_visual {background: lightcoral;}
+   /* .main_visual {background: lightcoral;} */
    .main_visual .text_box {
       display: flex;justify-content: center;align-items: center;
-      width: 100%;;height: 80vh;
-      background: lightsalmon;
+      width: 100%;height: 100vh;
+      /* background: lightsalmon; */
    }
-   .main_visual span {
+   .main_visual p {
       position: relative;
-      display: block;
-      width: 70rem;height:40rem;
+      /* width: 70rem;height:40rem; */
       margin-right: 40rem;
-      background: lightgrey;}
-   .main_visual span p {
-      position: absolute;right: -20rem;top: 35%;
-      width: 25rem;height:12rem;background: darkgrey;}
+      /* border:3px dotted lightgrey; */
+      font-family: "Inter Tight";
+      font-size: 11rem;letter-spacing: -0.3rem;line-height: 11.5rem;}
+   .main_visual span {
+      position: absolute;right: -13em;top: 35%;
+      padding: 1rem;
+      /* width: 25rem;height:12rem; */
+      font-size: 1.4rem;font-weight: 300;line-height: 2.1rem;letter-spacing: 0rem;
+      /* border:1px dashed lightgrey; */
+   }
 
 
 
@@ -49,45 +61,100 @@ header .gnb {
 
    /***  section.profile ***/
 
-   .profile {background: lightpink;}
+   .profile {
+      height: 100vh;
+      /* border:1px dashed lightgrey; */
+   }
    .profile .profile_wrap {
       display: flex;justify-content: center;
-      width: 100%;
+      gap: 4.5rem;
+      width: 85%;height: 100%;
+      margin: auto;
+      /* border:1px dashed lightgrey; */
+
    }
    .profile .my_info {
-      background: lightyellow;
+      width: 40%;
+      /* background: rgba(255,255,224,0.3) */
    }
-   .my_info span {display: inline-block;width: 15rem;height: 4rem; background: rosybrown;}
-   .my_info strong {display: inline-block;width: 15rem;height: 3rem; background: rosybrown;}
-   .my_info img {display: block;width:40rem;height: 50rem;background: brown;}
-   .my_info p {display: block;height: 2.5rem;margin-top: 0.3rem;background: rosybrown;}
+   .my_info span {margin-right: 1.5rem;font-size: 2.6rem;font-weight: 600;
+      /* border:1px dashed lightgrey; */
+   }
+   .my_info strong {font-size: 1.8rem;font-weight: 400;
+      /* border:1px dashed lightgrey; */
+   }
+   .my_info img {
+      display: block;width:100%;height: auto;
+      /* border-top-left-radius: 45%;
+      border-top-right-radius: 45%; */
+      margin: 1.5rem 0;}
+   .my_info p {
+      font-size: 1.8rem;font-weight: 400;
+      /* border:1px dashed lightgrey */
+   }
    
 
    .profile .detail_info {
-      display: flex;
-      background: lightseagreen;
+      display: flex;gap: 4.5rem;
+      width: 60%;
+      /* background: rgba(255,255,255,0.3) */
    }
-   .profile .detail_info .info_box {border:1px solid #fff;width: 35rem;height: 20rem;}
-
+   .profile .detail_info .detail_left {width: 100%;}
+   .profile .detail_info .info_box {
+      width: 100%;
+      margin-top: 5rem;
+      /* background: rgba(255,255,255,0.3); */
+   }
+   .profile .detail_info span {
+      display: block;
+      margin-bottom: 2rem;
+      font-family: "Inter Tight";
+      font-size: 2.4rem;font-weight: 500;
+      text-decoration: underline 0.1rem;
+   }
+   .profile .detail_info p, .profile .detail_info li {
+      font-size: 1.8rem;font-weight: 400;line-height: 4rem;
+   }
+   .profile .softwares li {display: flex;justify-content: space-between;}
 
 
    /* * * section.skills * * */
-
-   .skills_wrap {background: lightcoral;}
+   
+   .skills {height: 100vh;}
+   .skills_wrap {
+      width: 85%;height: 100%;
+      margin: auto;
+      border:1px dashed lightgrey;
+   }
    .skills_wrap .skill_list {
       display: flex;flex-wrap: wrap;
       justify-content: center;
    }
    .skills_wrap .skill_list li {
-      display: flex;justify-content: center;
-      width: 45rem;height: 50rem;border: 1px solid lightcyan;}
-   .skill_list li .skill_bar {width:35rem;height:35rem;background: lightblue;}
+      display: flex;flex-direction:column;align-items: center;gap: 1.5rem;
+      width: calc(100% / 3);
+      padding: 2rem;
+      border:1px dashed lightgrey;
+   }
+   .skills_wrap .skill_list p {text-align: center;}
+   .skill_list li .skill_bar {
+      width:35rem;height:35rem;
+      background: rgba(255,255,255,0.3);
+   }
+   .skill_list li .skill_title {
+      display: none;flex-direction: column;
+   }
 
 
 
    /* * * section.portfolio * * */
-
-   .portfolio_wrap {background: lightpink;}
+   
+   /* .portfolio {height: 100vh;} */
+   .portfolio_wrap {
+      width: 85%;height: 100%;
+      margin: auto;
+      border:1px dashed lightgrey;
+   }
    .portfolio_wrap .por_div {
       display: flex;justify-content: space-between;
       width: 100%;
@@ -108,7 +175,8 @@ header .gnb {
    .portfolio .port_thumbnails li p {
       display: block;width: 30rem;height: 3rem; margin-bottom: 1rem;background: rosybrown}
    .portfolio .port_thumbnails li span {display: block;width: 30rem;height: 8rem; background: rosybrown;}
-   .portfolio .port_thumbnails li img {display: block;height: 50rem; background: lightsalmon;}
+   .portfolio .port_thumbnails li img {
+      display: block;height: 50rem; background: lightsalmon;}
    .portfolio .port_thumbnails .contents {height: 10rem;margin-bottom: 1rem;background: rosybrown;}
    .portfolio .port_thumbnails a {display: block;width: 25rem;height: 10rem; background: lightblue;}
 
