--- a/css/main.css
+++ b/css/main.css
@@ -162,41 +162,66 @@ header .gnb {
    .portfolio_wrap {
       width: 85%;height: 100%;
       margin: auto;
-      border:1px dashed lightgrey;
+      /* border:1px dashed lightgrey; */
    }
    .portfolio_wrap .por_div {
       display: flex;justify-content: space-between;
       width: 100%;}
    .portfolio .port_list {
-      flex-shrink: 0;
-      width: 50rem;height: 30rem;background: darkcyan;}
+      width: 50rem;height: 20rem;
+      padding: 1.5rem;
+      font-size: 2rem;
+   }
 
    .portfolio .port_thumbnails {
       display: flex;flex-direction: column;
       flex-shrink: 0;
-      width: 50%;background: darkcyan;}
+      width: 50%;}
    .portfolio .port_thumbnails li {
       display: block;
-      border: 1px solid white;
+      /* border: 1px solid white; */
    }
    .portfolio .port_thumbnails li p {
-      display: block;width: 30rem;height: 3rem; margin-bottom: 1rem;background: rosybrown}
-   .portfolio .port_thumbnails li span {display: block;width: 30rem;height: 8rem; background: rosybrown;}
+      display: block;
+      width: 30rem;height: 3rem; margin-bottom: 0.2rem;
+      font-weight: 1.6rem;}
+   .portfolio .port_thumbnails li span {
+      /* display: block; */
+      width: 30rem;height: 8rem; 
+      font-size: 3.2rem;font-weight: 700}
    .portfolio .port_thumbnails li img {
       display: block;height: 50rem; background: lightsalmon;}
-   .portfolio .port_thumbnails .contents {height: 10rem;margin-bottom: 1rem;background: rosybrown;}
-   .portfolio .port_thumbnails a {display: block;width: 25rem;height: 10rem; background: lightblue;}
+   .portfolio .contents {height: 10rem;margin-bottom: 2rem;}
+   .portfolio .contents strong {font-size: 2rem;font-weight: 700;}
+   .portfolio .contents p {font-weight: 1.8rem;}
+
+   .portfolio .port_thumbnails .view_link {
+      display: flex;justify-content: center;align-items: center;
+      width: 25rem;height: 10rem;
+      background: rgba(225,225,255,0.8);
+      border: 1px solid #fff;
+      border-radius: 1rem;
+      font-size: 3.2rem;color:#000;
+   }
 
 
 
 /* * * section.contact * * */
 
 .contact .contact_wrap {
-   display: flex;flex-direction: column;align-items: center;
-   background: lightcoral;}
+   display: flex;flex-direction: column;
+   align-items: center;
+   height: 100vh;
+   font-size: 3.8rem;
+}
 .contact span {
+   display: flex;justify-content: center;align-items: center;
    width: 50rem;height: 30rem;
-   background: lightblue;}
+   text-align: center;
+   /* background: lightblue; */
+}
 .contact .contact_info {
    width: 40rem;height: 25rem;
-   background: lightseagreen;}
+   font-size: 1.6rem;
+   /* background: lightblue; */
+   }
